<resources>
    <string name="app_name">RestaurantFinder</string>
    <string name="person_name">Person Name</string>
    <string name="food_rate">Food Rate</string>
    <string name="clean_rate">Clean Rate</string>
    <string name="comments">Comments about a restaurant that we all love</string>
    <string name="word_comments">Comments</string>
    <string name="rate">RATE</string>
    <string name="menu">MENU</string>
    <string name="restaurant_selected">Restaurant Selected</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_password">New password</string>
    <string name="sign_up_phrase">Sign up to Restaurant Finder!</string>
    <string name="success_signup">You can now login into Restaurant Finder!</string>
    <string name="error_signup">Something went wrong! Please try again later!</string>
    <string name="success_signup_button">Login!</string>
    <string name="ok_button">OK!</string>
    <string name="login_error">Email or password incorrect. Try again!</string>
    <string name="search_by_cuisine">Search for cuisine type…</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="show_restaurant_in_map">Map location</string>
    <string name="comment">Comment:</string>
    <string name="comment_text">What makes you love/hate this restaurant</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="type_of_meal">Type of Meal</string>
    <string name="hotdog">HotDog</string>
    <string name="lasagna">Lasagna</string>
    <string name="pizza">Pizza</string>
    <string name="hamburguer">Hamburguer</string>
    <string name="other">Other</string>
    <string name="restaurants_near_you">Restaurants near you</string>
    <string name="settings">Settings</string>
    <string name="notications">Notications</string>
    <string name="radius_size">Radius Size</string>
    <string name="_10km">10KM</string>
    <string name="_30km">30KM</string>
    <string name="_50km">50KM</string>
    <string name="_100km">100KM</string>
</resources>