<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_meal"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/food_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/food1"
                android:layout_height="wrap_content"
                android:text="@string/hotdog"
                android:layout_width="match_parent" />

            <RadioButton
                android:id="@+id/food2"
                android:layout_height="wrap_content"
                android:text="@string/lasagna"
                android:layout_width="match_parent"/>

            <RadioButton
                android:id="@+id/food3"
                android:layout_height="wrap_content"
                android:text="@string/pizza"
                android:layout_width="match_parent"/>

            <RadioButton
                android:id="@+id/food4"
                android:layout_height="wrap_content"
                android:text="@string/hamburguer"
                android:layout_width="match_parent"/>

            <RadioButton
                android:id="@+id/food5"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/other"
                android:layout_width="match_parent"/>

        </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Estimative km number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="the closer the better"/>

    </LinearLayout>


</LinearLayout>